# ottokode

./: .env  .env.example  .env.production  .gitignore  AI_IMPLEMENTATION_GUIDE.md  AI_INDEXING_SETUP.md  ARCHITECTURE.md  AUTHENTICATION_FLOW.md  BUILD_RESULTS.md  DEPLOYMENT_STATUS.md  DESKTOP_LOGO_GUIDE.md  DESKTOP_ONLY_DEVELOPMENT_POLICY.md  Dockerfile.ai  Dockerfile.api  Dockerfile.frontend  FEATURE_INVENTORY.md  FIXES_COMPLETED.md  GITHUB_RELEASE_SETUP.md  MACOS_SIGNING_GUIDE.md  MANUAL_DEPLOYMENT_STEPS.md  MANUAL_TASKS_GUIDE.md  MANUAL_TASKS_REQUIRED.md  NEXTJS_INTEGRATION_GUIDE.md  OPENAI_RESPONSES_API_INTEGRATION.md  PHASE4_INTEGRATION_TESTING.md  POST_DEPLOYMENT_VALIDATION.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_ENV_SETUP.md  PRODUCTION_GUIDE.md  PRODUCTION_READY_CHECKLIST.md  PROJECT_AUDIT_PLAN.md  QUALITY_AUDIT_REPORT.md  README.md  SECURITY_ADVISORY.md  SETUP_GUIDE.md  SUPABASE_FUNCTION_CONFIG.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  (+23 more)
.github/: PULL_REQUEST_TEMPLATE.md
api/: ai-service.js  create-checkout-session.ts  create-payment-intent.ts  stripe-webhook.ts
browser-extension/: manifest.json
docs/: PRODUCTION_DEPLOYMENT.md
migrations/: 20250919_add_admin_system.sql  20250919_add_ai_indexing.sql  20250919_add_ai_patch_audit.sql  20250920_add_patch_audit_functions.sql
scripts/: audit.sh  build-production.sh  build.js  index-repo.cjs  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: ottokode.desktop
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  websocket_server.rs
(+833 files in other folders)
